<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/hardware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hardware"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/body" />

            <Spinner
                android:id="@+id/spBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tvBodyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/kit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/kit" />

            <Spinner
                android:id="@+id/spKit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tvKitName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/connection" />

            <TextView
                android:id="@+id/connection2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/connection2"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/supply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/supply" />

            <Spinner
                android:id="@+id/spSupply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tvSupplyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/MMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/MMI" />

            <Spinner
                android:id="@+id/spMMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tvMMIName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/inputs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/inputs" />

            <Spinner
                android:id="@+id/spInput1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

            <Spinner
                android:id="@+id/spInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

            <Spinner
                android:id="@+id/spInput3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

            <Spinner
                android:id="@+id/spInput4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btnNext" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>