<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/hardware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hardware"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/connectionLEP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/connectionLEP" />

            <Spinner
                android:id="@+id/spCLEP1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

            <Spinner
                android:id="@+id/spCLEP2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

            <Spinner
                android:id="@+id/spCLEP3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

            <Spinner
                android:id="@+id/spCLEP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btnNext" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>